# opendesk-edu

./: .commitlintrc.yaml  .gitignore  .gitlab-ci.hrz.yml  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .releaserc.yaml  .sops-age.pub  .sops.yaml  .yamllint  0001-ci-add-GitLab-CI-pipeline-on-opencode.de.patch  AGENTS.md  CERTIFICATE_RENEWAL_STATUS.md  CHANGELOG.md  COMPLETED_OIDC_FIX.md  COMPONENTS-SERVICE.md  CONTRIBUTING.md  FINAL_COMPLETION_REPORT.md  LICENSE  MANUAL_KEYCLOAK_SETUP.md  MULTI-DOMAIN-FIXES.md  Makefile  PLAN.md  PORTAL_CERTIFICATE_FIX.md  PORTAL_MULTIDOMAIN_OIDC_COMPLETE.md  PORTAL_OIDC_CLEANUP_STATUS.md  PORTAL_OIDC_FIX.md  PORTAL_OIDC_ROUTING_FIX.md  PORTAL_SAML_COMPLETION.md  PORTAL_SAML_RESTORATION.md  README-EE.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SOGO_DEPLOYMENT_VERIFICATION_COMPLETE.md  SOGO_FINAL_DEPLOYMENT_SUCCESS.md  SOGO_FIXES_VERIFICATION_GUIDE.md  SUMMARY_OIDC_FIX.md  SUPPORT.md  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  (+1 more)
scripts/user_import/: Dockerfile  Makefile  OPERATIONS_RUNBOOK.md  README.md  archive_service_user.py  deprovision_delete.py  deprovision_disable.py  deprovision_user.py  provision.py  pyproject.toml  requirements.txt  sync_users.py
scripts/user_import/kubernetes/: cronjob.yaml  rbac.yaml  secrets.yaml.template
scripts/user_import/lib/: __init__.py  argparse_types.py  constants.py  import_user.py  keycloak.py  random_user.py  ucs.py
scripts/user_import/tests/: __init__.py  conftest.py  test_archive_service_user.py  test_deprovision_user.py  test_keycloak.py  test_sync_users.py  test_ucs.py
(+1357 files in other folders)
